--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="arthur.ico">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" >
 </head>
-<body class="skin-blue" style="overflow-x:auto;">
-  <app-root></app-root>
-</body>
+  <body class="fixed-nav sticky-footer bg-dark" id="page-top">
+      <app-root></app-root>
+  </body>
 </html>
